Make form submission fail if no respondent is selected